deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: web-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /user
            backend:
              service:
                name: user-service
                port:
                  number: 8080
